adc imagens e secoes secundarias

--- a/exercises/bloco_3/dia_4/index.html
+++ b/exercises/bloco_3/dia_4/index.html
@@ -5,6 +5,39 @@
         <meta name="viewport" content="width=device-widtch" />
     </head>
     <body>
-        
+        <header><h1>Soco a 80kh/h: Conheça o Stomatopoda.</h1></header>
+        <nav>
+            <ul>
+                <li>Página Inicial</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+        <main>
+            <h2>Fatos sobre o Stomatopoda</h2>
+            <article>
+                <h3>Características</h3>
+                <ul>
+                    <li>Reino: Animalia</li>
+                    <li>Filo: Arthropoda</li>
+                    <li>Subfilo: Crustacea</li>
+                    <li>Classe: Malacostraca</li>
+                    <li>Subclasse: Hoplocarida</li>
+                    <li>Ordem:Stomatopoda</li>
+                </ul>
+                <p> Popularmente conhecidos como lacraias-do-mar ou tamarutacas, os Stomatopodas são crustáceos que vivem no fundo das praias e oceanos e são exclusivamente carnívoros, tendo um comportamento agressivo ou de côrte para com outros animais. Se alimentam de outros animais marinhos e seu tamanho pode variar entre poucos milimetros e 40cm! </p>
+            </article>
+            <h2>Fatos interessantes</h2>
+            <section>
+                <h3>Visionário</h3>
+                <img src="visionary.png" alt="enxerga muito alem do ser humano">
+                <p>Você sabia que esse animal consegue perceber o espectro ultravioleta e infravermelho de cores? É uma das estratégias utilizadas para procurar alimentos.</p>
+            </section>
+            <section>
+                <h3>Boxeador recordista</h3>
+                <img src="boxer.png" alt="desfere socos absurdamente fortes">
+                <p>Ao entrar em combate, o Stomatopoda pode desferir socos de até 720km/h!</p>
+            </section>
+        </main>    
     </body>
 </html>
