adc aside e referencias

--- a/exercises/bloco_3/dia_4/index.html
+++ b/exercises/bloco_3/dia_4/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-widtch" />
     </head>
     <body>
-        <header><h1>Soco a 80kh/h: Conheça o Stomatopoda.</h1></header>
+        <header><h1>Soco a 720km/h: Conheça o Stomatopoda.</h1></header>
         <nav>
             <ul>
                 <li>Página Inicial</li>
@@ -25,7 +25,7 @@
                     <li>Subclasse: Hoplocarida</li>
                     <li>Ordem:Stomatopoda</li>
                 </ul>
-                <p> Popularmente conhecidos como lacraias-do-mar ou tamarutacas, os Stomatopodas são crustáceos que vivem no fundo das praias e oceanos e são exclusivamente carnívoros, tendo um comportamento agressivo ou de côrte para com outros animais. Se alimentam de outros animais marinhos e seu tamanho pode variar entre poucos milimetros e 40cm! </p>
+                <p> Popularmente conhecidos como lacraias-do-mar ou tamarutacas, os Stomatopodas são crustáceos que vivem no fundo das praias e oceanos e são exclusivamente carnívoros, tendo um comportamento agressivo ou de côrte para com outros animais. Se alimentam de outros animais marinhos e seu tamanho pode variar entre <em>poucos milimetros e 40cm!</em> </p>
             </article>
             <h2>Fatos interessantes</h2>
             <section>
@@ -38,6 +38,16 @@
                 <img src="boxer.png" alt="desfere socos absurdamente fortes">
                 <p>Ao entrar em combate, o Stomatopoda pode desferir socos de até 720km/h!</p>
             </section>
+            <nav>
+                <h3>Referências</h3>
+                <ul>
+                    <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The Oat Meal</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
+                </ul>
+            </nav>
         </main>    
+        <aside>
+            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Assista o Stomatopoda em ação!</a>
+        </aside>
     </body>
 </html>
