--- a/exercises/bloco_3/dia_4/index.html
+++ b/exercises/bloco_3/dia_4/index.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-widtch" />
+        <title>Fatos sobre Stomatopoda</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header><h1>Soco a 720km/h: Conheça o Stomatopoda.</h1></header>
         <nav>
             <ul>
-                <li>Página Inicial</li>
-                <li>Sobre</li>
-                <li>Contato</li>
+                <li><a href="#home" >Página Inicial</a></li>
+                <li><a href="#contact" >Sobre</a></li>
+                <li><a href="#contact" >Contato</a></li>
             </ul>
         </nav>
-        <main>
+        <main id="home">
             <h2>Fatos sobre o Stomatopoda</h2>
             <article>
                 <h3>Características</h3>
@@ -49,5 +51,8 @@
         <aside>
             <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Assista o Stomatopoda em ação!</a>
         </aside>
+        <footer id="contact">
+            <p>Conteúdo compilado por: Plics</p>
+        </footer>
     </body>
 </html>
