--- a/exercises/bloco_5/5_1/index.html
+++ b/exercises/bloco_5/5_1/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
     <h2 id="page-title">Título</h2>
-    <p id="paragraph">Dê uma cor para este parágrafo!</p>
+    <p class="boxy" id="paragraph">Dê uma cor para este parágrafo!</p>
     <h4 id="subtitle">Subtítulo</h4>
-    <p id="second-paragraph">Segundo parágrafo!</p>
+    <p class="boxy" id="second-paragraph">Segundo parágrafo!</p>
 
     <script>
       var paragraph = document.getElementById("paragraph");
       paragraph.style.color = "red";
     </script>
     <script>
-        var paragraph = document.getElementById("page-title").innerText = "Star Wars"
+      var paragraph = document.getElementById("page-title").innerText = "Star Wars";
+    </script>
+    <script>
+      var paragraph = document.getElementById("second-paragraph").innerText = "Nunca existiu filme de scifi mais criativo e fantastico!";
+    </script>
+    <script>
+      var paragraph = document.getElementById("subtitle").innerText = "Phantom Menace";
     </script>
   </body>
 </html>
