--- a/exercises/bloco_5/5_1/index.html
+++ b/exercises/bloco_5/5_1/index.html
@@ -20,7 +20,8 @@
       var paragraph = document.getElementById("second-paragraph").innerText = "Nunca existiu filme de scifi mais criativo e fantastico!";
     </script>
     <script>
-      var paragraph = document.getElementById("subtitle").innerText = "Phantom Menace";
+      var paragraph = document.querySelectorAll("#subtitle").innerText = "Phantom Menace";
+      paragraph.style.
     </script>
   </body>
 </html>
