realizado todos os exercicios

--- a/exercises/bloco_5/5_1/exercises.html
+++ b/exercises/bloco_5/5_1/exercises.html
@@ -78,6 +78,13 @@
       }
     }
     toCap();
+    function log(){
+      captalized = document.getElementsByTagName('p');
+      for (let i=0;i<captalized.length;i++){
+        console.log(captalized[i].innerText);
+      }
+    }
+    log();
     </script>
   </body>
 </html>
