--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -58,6 +58,10 @@
   <body>
     <script>
       // COLOQUE SEU CÓDIGO AQUI
+      let header = document.createElement('h1');
+      document.body.appendChild(header);
+      header.innerText='Exercício 5.2 - JavaScript DOM';
+      
     </script>
   </body>
 </html>
