--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -61,7 +61,9 @@
       let header = document.createElement('h1');
       document.body.appendChild(header);
       header.innerText='Exercício 5.2 - JavaScript DOM';
-      
+      let boxDad = document.createElement('div');
+      document.body.appendChild(boxDad);
+      boxDad.className = 'main-content'
     </script>
   </body>
 </html>
