--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -63,7 +63,9 @@
       header.innerText='Exercício 5.2 - JavaScript DOM';
       let boxDad = document.createElement('div');
       document.body.appendChild(boxDad);
-      boxDad.className = 'main-content'
+      boxDad.className = 'main-content';
+      let box1stSon = document.createElement('div');
+      boxDad.appendChild(box1stSon);
     </script>
   </body>
 </html>
