--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -66,6 +66,10 @@
       boxDad.className = 'main-content';
       let box1stSon = document.createElement('div');
       boxDad.appendChild(box1stSon);
+      box1stSon.className = 'center-content';
+      let paragraph = document.createElement('p');
+      box1stSon.appendChild(paragraph);
+      paragraph.innerText = 'Aqui vai o resultado do exercicio 4';
     </script>
   </body>
 </html>
