--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -70,6 +70,12 @@
       let paragraph = document.createElement('p');
       box1stSon.appendChild(paragraph);
       paragraph.innerText = 'Aqui vai o resultado do exercicio 4';
+      let box2ndSon = document.createElement ('div');
+      boxDad.appendChild(box2ndSon);
+      box2ndSon.className = 'left-content';
+      let box3ndSon = document.createElement ('div');
+      boxDad.appendChild(box3ndSon);
+      box3ndSon.className = 'right-content';
     </script>
   </body>
 </html>
