--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -76,6 +76,10 @@
       let box3ndSon = document.createElement ('div');
       boxDad.appendChild(box3ndSon);
       box3ndSon.className = 'right-content';
+      let image = document.createElement ('img');
+      box2ndSon.appendChild(image);
+      image.src = 'https://picsum.photos/200';
+      image.nameClass = 'small-image';
     </script>
   </body>
 </html>
