--- a/exercises/bloco_5/5_2/exercises.html
+++ b/exercises/bloco_5/5_2/exercises.html
@@ -92,6 +92,8 @@
         boxDad.appendChild(headers);
         headers.className = 'description';
       }
+      boxDad.removeChild(box2ndSon);
+      box3ndSon.style.marginRight = 'auto';
     </script>
   </body>
 </html>
